<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">密码管家</string>


    <string name="string_add_password_suc">保存成功</string>

    <!-- 九宫格锁 -->
    <string name="lib_name">PatternLockView</string>
    <string name="message_pattern_dot_added">Dot added to pattern</string>
    <string name="message_pattern_started">Pattern drawing started</string>
    <string name="message_pattern_detected">Pattern drawing completed</string>
    <string name="message_pattern_cleared">Pattern cleared</string>
    <string name="lock_privacy_hint_title"><![CDATA[<font color="#14B0FF">%1$d</font> Apps with Privacy Issues]]></string>
    <string name="lock_privacy_hint_des">Lock and protect apps with a password</string>
    <string name="lock_protect">PROTECT(%1$d)</string>
    <string name="lock_pattern_set_hint">设置解锁手势</string>
    <string name="lock_pattern_reset_has_locker">重置手势锁</string>
    <string name="lock_pattern_set_error_hint">至少要连接四个点 \n 请重试</string>
    <string name="lock_pattern_confirm">再次确认手势</string>
    <string name="lock_pattern_mismatch_hint">手势不匹配</string>
    <string name="lock_pattern_unlock_hint">解锁</string>
    <string name="lock_reset"><u>重设</u></string>
    <string name="lock_cancel">取消</string>
    <string name="lock_ok">确定</string>
    <string name="lock_login">LOGIN</string>
    <string name="lock_not_now">NOT NOW</string>
    <string name="lock_yes">YES</string>
    <string name="lock_not_now_hint">You can set fingerprint unlock later in AppLock settings</string>
    <string name="lock_forget_password">忘记密码</string>
    <string name="lock_forget_password_hint">1.Log in to your Google account.\n\n2.Reset your password.</string>
    <string name="lock_forget_set_new_hint">设置新的解锁手势</string>
    <string name="lock_fingerprint_use_hint">Use fingerprint to unlock?</string>
    <string name="lock_fingerprint_authenticate">Authenticate with your fingerprint.</string>
    <string name="lock_auth_success">Fingerprint unlock enabled.</string>
    <string name="lock_auth_fail">Authenticate Failed.Please Try Again.</string>
    <string name="lock_settings">设置</string>
    <string name="lock_settings_unlock_all">Enter passcode once to unlock all apps</string>
    <string name="lock_settings_reset_succeed">重置成功</string>
    <string name="lock_settings_unlock">Unlock</string>
    <string name="lock_settings_change_passcode">修改手势锁</string>
    <string name="lock_settings_fingerprint_unlock">使用指纹去解锁</string>
    <string name="lock_protected_by">Protected by</string>
    <string name="lock_do_not_lock_app">Don\'t lock this App</string>
    <string name="lock_invisible_pattern">Invisible Pattern</string>
    <string name="lock_dialog_settings_title">You\'d Like to Lock apps&#8230;</string>
    <string name="lock_dialog_settings_options_one">at screen off</string>
    <string name="lock_dialog_settings_options_two">after screen off for 3 min</string>
    <string name="lock_dialog_settings_options_three">immediately upon exit</string>

    <string name="lock_loading">Loading …</string>
    <string name="lock_wrong_mail_hint">Please use the Google Account that you have signed in to this device.</string>

    <string name="lock_grant_guide_hint">Enable AppLock by granting access to %1$s</string>
    <string name="lock_name">手势锁</string>
    <string name="lock_string_switch_on">已开启</string>
    <string name="lock_string_switch_off">已关闭</string>
    <string name="activity_title_delete_list_password">账号删除记录</string>
    <string name="activity_title_delete_list_daily_self">随手记删除记录</string>

    <!--更新String-->
    <string name="update_title">发现全新版本</string>
    <string name="update_desc">一个全新的版本被发出，尝试更新一下？ </string>
    <string name="update_ok">没毛病，老铁</string>
    <string name="update_cancel">我拒绝</string>
    <string name="string_update_success">新的安装包下载成功</string>
    <string name="string_update_err">更新包下载失败</string>

    <string name="string_et_single_plan_empty">计划怎么能为空呢</string>
    <string name="string_et_single_plan_fail">好像并没有添加任何计划</string>

    <string name="default_check_group_title">默认分组</string>
    <string name="default_daily_self_tv_group">随手记</string>
    <string name="string_delete_list_top">共%1$d条删除记录</string>
    <string name="toast_copy_success">复制成功</string>

    <string name="color_swatch_description" translatable="false">Color <xliff:g example="14" id="color_index">%1$d</xliff:g></string>
    <string name="color_swatch_description_selected" translatable="false">Color <xliff:g example="14" id="color_index">%1$d</xliff:g> selected</string>

    <string name="nearby">查看附近的人</string>
    <string name="add_friend">add friend</string>
    <string name="string_rlv_empty">空空如也</string>
    <string name="string_self_task_edit_error">本次修改未发生变化</string>
    <string name="string_self_task_edit_suc">本次修改成功</string>

    <string name="tab_str_all_self_task">工作标签</string>
    <string name="tab_str_delete_self_task">已删除</string>
    <string name="tab_str_suc_self_task">已完成.归档</string>

    <string name="tab_str_today">今日复盘</string>
    <string name="tab_str_yesterday">更多操作</string>

    <string name="previous">Go to previous</string>
    <string name="next">Go to next</string>
    <string name="calendar">Calendar</string>

    <string name="permission_title">权限需要</string>
    <string name="permissions_message">为了正常使用这个功能，我们需要一些权限。</string>
    <string name="home_tab_options">功能</string>
    <string name="fragment_title_options">所有功能</string>
    <string name="home_tab_everyday_replay">复盘</string>
    <string name="fragment_title_everyday_replay">每日复盘</string>
    <string name="home_tab_daily_task">计划</string>
    <string name="fragment_title_daily_task">我的计划</string>
    <string name="string_everyday_replay_empty">复盘内容总不能为空吧</string>
    <string name="activity_title_label_setting">标签设置</string>

    <string name="notification_app_name">闹铃计划</string>
    <string name="notification_content">"该执行这个任务啦!"</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="str_long_plan_insert_suc">长期计划添加成功。</string>
    <string name="str_custom_review_insert_suc">复盘添加成功。</string>
    <string name="str_long_plan_edit_suc">修改计划成功。</string>

    <string name="font_palatino">palatino.otf</string>
    <string name="font_regular">GTWalsheim_Regular.otf</string>
    <string name="font_medium">GTWalsheim_Medium.otf</string>
    <string name="font_bold">GTWalsheim_Bold.otf</string>
    <string name="string_content_is_empty">怎么能为空呢？</string>
    <string name="string_inner_empty">内因咋能为空呢？</string>
    <string name="string_outer_empty">外因咋能为空呢？</string>
</resources>
