<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lockColorBackground">

        <RelativeLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/lockColorBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_back"
                android:tint="@color/lockColorControlNormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_toRightOf="@+id/btn_back"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/lock_name"
                android:textColor="@color/lockColorTextPrimary"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/tv_str_switch"
                android:layout_width="wrap_content"
                android:layout_toLeftOf="@+id/switch_is_open_lock"
                android:layout_centerVertical="true"
                android:text="@string/lock_string_switch_on"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:alpha="0.6"
                android:layout_marginRight="12dp"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_is_open_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                style="@style/pattern_set_switch"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                />
        </RelativeLayout>

        <ImageView
            android:id="@+id/lock_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_btn_lock"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:lineSpacingExtra="8dp"
            android:text="@string/lock_pattern_set_hint"
            android:textColor="@color/lockColorTextPrimary"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lock_icon" />

        <com.mdove.passwordguard.ui.patternlockview.PatternLockView
            android:id="@+id/pattern_lock_view"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginBottom="100dp"
            app:correctStateColor="@color/lockColorAccent"
            app:dotNormalSize="16dp"
            app:dotSelectedSize="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:normalStateColor="@color/lockColorPattern"
            app:wrongStateColor="@color/lockColorPatternError" />

        <TextView
            android:id="@+id/btn_reset"
            android:layout_width="168dp"
            android:layout_height="38dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/lock_reset"
            android:textColor="@color/lockColorTextPrimary"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>