<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lockColorBackground">

        <RelativeLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/lockColorBackground"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:scaleType="centerInside"
                android:src="@mipmap/lock_ic_back"
                android:tint="@color/lockColorControlNormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/btn_back"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/lock_name"
                android:textColor="@color/lockColorTextPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/btn_forget"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/lock_forget_password"
                android:textColor="@color/lockColorTextPrimary"
                android:textSize="14sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/lock_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/lock_ic_lock_large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:lineSpacingExtra="8dp"
            android:text="@string/lock_pattern_unlock_hint"
            android:textColor="@color/lockColorTextPrimary"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lock_icon" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_is_open_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint" />

        <com.mdove.passwordguard.ui.patternlockview.PatternLockView
            android:id="@+id/pattern_lock_view"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginBottom="100dp"
            app:correctStateColor="@color/lockColorAccent"
            app:dotNormalSize="16dp"
            app:dotSelectedSize="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_is_open_lock"
            app:normalStateColor="@color/lockColorPattern"
            app:wrongStateColor="@color/lockColorPatternError" />

        <ImageView
            android:id="@+id/btn_finger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/lock_ic_fingerprint"
            android:tint="@color/lockColorControlNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>